; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_delta/extr_compat.c_add_absent_cb.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_delta/extr_compat.c_add_absent_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.editor_baton = type { i32 }
%struct.change_node = type { i32, i32, i32 }

@RESTRUCTURE_ADD_ABSENT = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i8*, i32, i32, i32*)* @add_absent_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @add_absent_cb(i8* %0, i8* %1, i32 %2, i32 %3, i32* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca %struct.editor_baton*, align 8
  %12 = alloca %struct.change_node*, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = bitcast i8* %13 to %struct.editor_baton*
  store %struct.editor_baton* %14, %struct.editor_baton** %11, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = load %struct.editor_baton*, %struct.editor_baton** %11, align 8
  %17 = getelementptr inbounds %struct.editor_baton, %struct.editor_baton* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call %struct.change_node* @insert_change(i8* %15, i32 %18)
  store %struct.change_node* %19, %struct.change_node** %12, align 8
  %20 = load i32, i32* @RESTRUCTURE_ADD_ABSENT, align 4
  %21 = load %struct.change_node*, %struct.change_node** %12, align 8
  %22 = getelementptr inbounds %struct.change_node, %struct.change_node* %21, i32 0, i32 2
  store i32 %20, i32* %22, align 4
  %23 = load i32, i32* %8, align 4
  %24 = load %struct.change_node*, %struct.change_node** %12, align 8
  %25 = getelementptr inbounds %struct.change_node, %struct.change_node* %24, i32 0, i32 1
  store i32 %23, i32* %25, align 4
  %26 = load i32, i32* %9, align 4
  %27 = load %struct.change_node*, %struct.change_node** %12, align 8
  %28 = getelementptr inbounds %struct.change_node, %struct.change_node* %27, i32 0, i32 0
  store i32 %26, i32* %28, align 4
  %29 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %29
}

declare dso_local %struct.change_node* @insert_change(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
